2011-07-26  Shinya Kawanaka  <shinyak@google.com>

        Added a test to normalize option.text.
        https://bugs.webkit.org/show_bug.cgi?id=57746

        Reviewed by Kent Tamura.

        * fast/forms/option-strip-unicode-spaces-expected.txt: Added.
        * fast/forms/option-strip-unicode-spaces.html: Added.

2011-07-26  Noel Gordon  <noel.gordon@gmail.com>

        Add regression test for :empty { display: none }
        https://bugs.webkit.org/show_bug.cgi?id=26570

        Reviewed by Alexey Proskuryakov.

        * fast/css/pseudo-empty-display-none-expected.txt: Added.
        * fast/css/pseudo-empty-display-none.html: Added.

2011-07-25  Dan Bernstein  <mitz@apple.com>

        Updated three more tests that relied on fonts loading synchronously.

        * fast/blockflow/japanese-rl-text-with-broken-font.html:
        * platform/mac/fast/text/myanmar-shaping.html:
        * platform/mac/fast/text/thai-combining-mark-positioning.html:

2011-07-25  Dan Bernstein  <mitz@apple.com>

        <rdar://problem/9835028> Font loading during layout can cause layout code to be re-entered via resource load delegate
        https://bugs.webkit.org/show_bug.cgi?id=65123

        Reviewed by Darin Adler.

        Updated tests that depended on fonts loading synchronously during layout.
        Unfortunately, font loading does not fire any DOM events, so in most cases
        a constant timeout had to be introduced.

        * fast/blockflow/broken-ideograph-small-caps.html:
        * fast/css/color-leakage.html:
        * fast/css/custom-font-xheight.html:
        * fast/css/font-face-multiple-faces.html:
        * fast/css/font-face-multiple-remote-sources.html:
        * fast/css/font-face-remote.html:
        * fast/css/font-face-woff.html:
        * svg/W3C-SVG-1.1-SE/text-intro-09-b.svg:
        * svg/W3C-SVG-1.1/fonts-elem-07-b.svg:
        * svg/custom/svg-fonts-fallback.xhtml:
        * svg/custom/svg-fonts-in-html.html: