@@ -15,3 +15,9 @@
 <p>The square glyph should be located above the line glyph.</p>
 <!-- Use arabic code points to make WebKit use ComplexTextController -->
 <div>&#x0606;&#x06e1;</div>
+<script>
+if (window.layoutTestController) {
+    layoutTestController.waitUntilDone();
+    setTimeout(function() { layoutTestController.notifyDone(); }, 100);
+}
+</script>
